CI: Backport CI from master

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -8,7 +8,7 @@ FROM golang:${VERSION}
 
 RUN apk add --no-cache --quiet make curl git jq unzip tree && \
     go get -u golang.org/x/lint/golint && \
-    curl -sSL --retry 3 --retry-connrefused https://github.com/gotestyourself/gotestsum/releases/download/v0.5.3/gotestsum_0.5.3_linux_amd64.tar.gz | tar -xz -C /usr/local/bin gotestsum
+    curl -sSL --retry 3 --retry-connrefused https://github.com/gotestyourself/gotestsum/releases/download/v1.6.1/gotestsum_1.6.1_linux_amd64.tar.gz | tar -xz -C /usr/local/bin gotestsum
 
 VOLUME ["/tmp"]
 
@@ -17,10 +17,11 @@ ENV TERM xterm-256color
 
 WORKDIR /go-elasticsearch
 
-COPY go.mod go.sum ./
+COPY . .
+
 RUN go mod download
 
-COPY internal/cmd/generate/go.mod internal/cmd/generate/go.sum
-RUN cd internal/cmd/generate && go mod download
+WORKDIR internal/cmd/generate
+RUN go mod download
 
-COPY . .
+WORKDIR /go-elasticsearch
