--- a/.github/workflows/test-integration.yml
+++ b/.github/workflows/test-integration.yml
@@ -17,7 +17,7 @@ on:
 
 env:
   GITHUB_ACTIONS: true
-  ELASTICSEARCH_VERSION: elasticsearch-oss:7.x-SNAPSHOT
+  ELASTICSEARCH_VERSION: elasticsearch:7.x-SNAPSHOT
 
 jobs:
   test:
